# proton-mail-bridge-cli

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  llms.txt  pyproject.toml
.github/workflows/: ci.yml
src/proton_mail_bridge/: cli.py  meta.py  skill_install.py
src/proton_mail_bridge/commands/: account.py  attachment.py  bridge.py  compose.py  mailbox.py  message.py
src/proton_mail_bridge/core/: config.py  connection.py  errors.py  guard.py  imap.py  smtp.py
src/proton_mail_bridge/skills/: AGENTS.md  SKILL.md
src/proton_mail_bridge/skills/references/: commands.md  gotchas.md  workflows.md
src/proton_mail_bridge/utils/: mime.py  output.py  search.py
tests/: conftest.py  test_cli_root.py  test_cmd_account.py  test_cmd_attachment.py  test_cmd_bridge.py  test_cmd_compose.py  test_cmd_mailbox.py  test_cmd_message_read.py  test_cmd_message_write.py  test_config.py  test_connection.py  test_fanout.py  test_guard.py  test_imap_read.py  test_imap_write.py  test_meta.py  test_mime.py  test_output.py  test_search.py  test_skill_install.py  test_smoke.py  test_smtp.py
