[project]
name = "proton-mail-bridge-cli"
version = "0.1.0"
description = "Unofficial, agent-native CLI for Proton Mail Bridge (IMAP/SMTP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["proton", "protonmail", "proton-bridge", "imap", "smtp", "cli", "agent", "claude", "codex"]
authors = [{ name = "codename-cn" }]
dependencies = [
    "click>=8.1",
    "imap-tools>=1.7",
    "rich>=13.7",
    "click-repl>=0.3",
    "tomli-w>=1.0",
    "tzdata; platform_system == 'Windows'",
]

[project.urls]
Repository = "https://github.com/codename-cn/proton-mail-bridge-cli"
Issues = "https://github.com/codename-cn/proton-mail-bridge-cli/issues"
Changelog = "https://github.com/codename-cn/proton-mail-bridge-cli/blob/main/CHANGELOG.md"

[project.scripts]
proton-mail-bridge = "proton_mail_bridge.cli:main"
pmb = "proton_mail_bridge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proton_mail_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["live: real bridge calls (opt-in, --run-live)"]
